[package]
name = "reposerve"
version = "0.1.0"
authors = ["Éric BURGHARD <eric.burghard@solarsis.ao>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4"
actix-multipart = "0.3.0"
actix-service = "1.0.6"
actix-web = { version = "3", features = []}
anyhow = "1.0.33"
argh = "0.1.3"
bytes = "0.5.6"
chrono = "0.4.19"
env_logger = "0.8.1"
futures = "0.3"
log = "0.4.11"
percent-encoding = "2.1.0"
sanitize-filename = "0.2.1"
serde = "1.0.116"
serde_yaml = "0.8.13"
size_format = "1.0.2"
tempdir = "0.3.7"
v_htmlescape = "0.10.4"
