[package]
name = "reposerve"
description = "Simple Alpine Linux packages server you can use to consume and upload private packages in CI/CD pipelines."
version = "0.6.0"
authors = ["Éric BURGHARD <eric.burghard@itsufficient.me>"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.4"
actix-web = { version = "4", default-features = false, features = ["rustls"] }
rustls = "0.20"
anyhow = "1.0.33"
argh = "0.1.3"
chrono = "0.4.19"
env_logger = "0.8.1"
futures = "0.3"
log = "0.4.11"
percent-encoding = "2.1.0"
sanitize-filename = "0.2.1"
serde = "1.0.116"
serde_yaml = "0.8.13"
size_format = "1.0.2"
tempdir = "0.3.7"
v_htmlescape = "0.10.4"
actix-token-middleware = "0.3.0"
rustls-pemfile = "1.0.1"

[patch.crates-io]
actix-token-middleware = { git = "https://github.com/eburghar/actix-token-middleware.git", branch = "master" }
# actix-token-middleware = { path = "../actix-token-middleware" }
serde-vecmap = { git = "https://github.com/eburghar/serde-vecmap.git", branch = "master" }
# serde-vecmap = { path = "../serde-vecmap" }
